se añadio el framework
el framework para desarrollar la pagina sera materialize

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -10,4 +12,4 @@
     <h1>hola</h1>
     
 </body>
-</html>m
+</html>
