se agrego color a la barra de navegacion

--- a/index.html
+++ b/index.html
@@ -10,7 +10,29 @@
     <title>Donde la Tia</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        nav {
+            background-color: #000000; /* color de fondo de la barra de navegacion*/
+        }
+        nav a {
+            color: #ffff00; /* color del texto de los enlaces en la barra de navegacion*/
+        }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </style>
 </head>
 <body>
 
@@ -35,7 +57,7 @@
                     <p>Ofrecemos una amplia variedad de productos como completos, papas fritas, churrascos, hamburgesas y pollo asado</p>
                 </div>  
                 <div class="col s12 m6">
-                    <img src="css/local fisico.jpg" alt="Imagen del local">
+                    <img src="css/local fisico.jpg" width="140%" alt="Imagen del local">
                 </div>
             </div>
         </div>
