--- a/index.html
+++ b/index.html
@@ -18,19 +18,13 @@
             color: #ffff00; /* color del texto de los enlaces en la barra de navegacion*/
         }
 
+        section h2 {
+            color: #000000; /* color del texto de los titulos de seccion */
+        }
 
-
-
-
-
-
-
-
-
-
-
-
-
+        section p {
+            color: #666666; /* color de texto de los parrafos */
+        }
 
     </style>
 </head>
