--- a/index.html
+++ b/index.html
@@ -43,9 +43,8 @@
     <!-- Encabezado -->
     <nav>
         <div class="nav-wrapper">
-            <a href="#"class="brand-logo"><img src="css/logo donde la tia.jpg" width="5.5%" alt="Logo del local"></a>    
-            <a href="#" data-target="mobile-menu" class="sindenav-trigger"><i class="material-icons">menu</i></a>
-            <ul class="ocultar derecha-en medio-y-abajo">
+            <a href="#" class="brand-logo"><img src="css/logo donde la tia.jpg" width="5.5%" alt="Logo del local"></a>    
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="bienvenida">Inicio</a></li>
                 <li><a href="menu">Menú</a></li>
                 <li><a href="ubicacion">Ubicacion</a></li>
