--- a/index.html
+++ b/index.html
@@ -53,12 +53,13 @@
     </nav>
 
     <!-- Seccion de Bienvenida -->    
-    <section id="bienvenida" class="section" style="background-color: #ffff00; color: black;">
+    <section id="bienvenida" class="section" style="background-color: #ffff00a9; color: black;">
         <div class="container">
             <div class="row">
                 <div class="col s12 m6">
                     <h2>Bienvenidos al local de comida rápida Donde La Tía</h2>
                     <p>Ofrecemos una amplia variedad de productos como completos, papas fritas, churrascos, hamburgesas y pollo asado</p>
+                    <a href="#formulario" class="btn btn-large">Haz tu pedido</a>
                 </div>  
                 <div class="col s12 m6">
                     <img src="css/local fisico.jpg" width="140%" alt="Imagen del local">
