--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <div class="col s12 m4">
                     <div class="card">
                         <div class="card-image">
-                            <img src="css/papas fritas.jpg" alt="Imagen de papas fritas"> 
+                            <img src="css/papas fritas.jpg" width="30%" alt="Imagen de papas fritas"> 
                             <span class="card-title">Papas fritas</span>   
                         </div>
                         <div class="card-content">
@@ -103,7 +103,7 @@
                 <div class="col s12 m4">
                     <div class="card">
                         <div class="card-image">
-                            <img src="css/churrasco.jpg" alt="Imagen de Churrasco"> 
+                            <img src="css/churrasco.jpg" width="30%" alt="Imagen de Churrasco"> 
                             <span class="card-title">Churrasco</span>   
                         </div>
                         <div class="card-content">
