se agrego los ultimos productos

--- a/index.html
+++ b/index.html
@@ -90,13 +90,8 @@
                 <div class="col s12 m4">
                     <div class="card">
                         <div class="card-image">
-<<<<<<< Updated upstream
-                            <img src="css/papas fritas.jpg" width="30%" alt="Imagen de papas fritas"> 
-                            <span class="card-title">Papas fritas</span>   
-=======
-                            <img src="" width="30%" alt="imagen de papas fritas">
+                            <img src="css/papas fritas.jpg" width="30%" alt="imagen de papas fritas">
                             <span class="card-title">papas fritas</span>    
->>>>>>> Stashed changes
                         </div>
                         <div class="card-content">
                             <p>Deliciosas papas fritas con salsa ketchup.</p>
@@ -123,17 +118,31 @@
                 <div class="col s12 m4">
                     <div class="card">
                         <div class="card-image">
-                            <img src="" alt="Imagen de hamburgesas "> 
+                            <img src="css/hamburgesa.jpg" alt="Imagen de hamburgesas "> 
                             <span class="card-title"></span>   
                         </div>
                         <div class="card-content">
-                            <p>.</p>
+                            <p>Deliciosa hamburguesa con lechuga, tomate, queso y tocino.</p>
                         </div>
                         <div class="card-action">
                             <a href="#formulario">Pedir</a>
                         </div>
                     </div>
-                </div> 
+                </div>
+                <div class="col s12 m4">
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="css/pollo asado.jpg" alt="Imagen de pollo asado "> 
+                            <span class="card-title"></span>   
+                        </div>
+                        <div class="card-content">
+                            <p>Delicioso pollo asado con  papas fritas.</p>
+                        </div>
+                        <div class="card-action">
+                            <a href="#formulario">Pedir</a>
+                        </div>
+                    </div>
+                </div>  
             </div>
         </div>
     </section>
