--- a/index.html
+++ b/index.html
@@ -46,9 +46,10 @@
             <a href="#" class="brand-logo"><img src="css/logo donde la tia.jpg" width="5.5%" alt="Logo del local"></a>    
             
             <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="bienvenida">Inicio</a></li>
-                <li><a href="menu">Menú</a></li>
-                <li><a href="ubicacion">Ubicacion</a></li>
+                <li><a href="#bienvenida">Inicio</a></li>
+                <li><a href="#menu">Menú</a></li>
+                <li><a href="#ubicacion">Ubicacion</a></li>
+                <li><a href="#formulario">Fomulario</a></li>
             </ul>
         </div>
     </nav>
@@ -147,7 +148,29 @@
         </div>
     </section>
 
+    <!-- formulario -->
+    <section id="formulario" class="section">
+        <div class="container">
+            <div class="row">
+                <div class="col s12">
+                    <h2>Realiza tu pedido</h2>
+                    <p>Por favor, complete el siguiente formulario y nos pondremos en contacto con tigo a la brevedad posible</p>
+                </div>
+            </div>
+        <div class="row">
+            <form class="col s12" method="post" action="procesar_pedido.php">
+                <div class="row">
+                    <div class="input-field col s12">   
+                        <input id="nombre" type="text" name="nombre" required>
+                        <label for="nombre">Nombre</label>
+                    </div>
+                </div>
+        </div>
+        
+        </div>
 
+
+    </section>
 
 
 
