se termino el formulario

--- a/index.html
+++ b/index.html
@@ -164,12 +164,24 @@
                         <input id="nombre" type="text" name="nombre" required>
                         <label for="nombre">Nombre</label>
                     </div>
+                    <div class="input-field col s12">
+                        <input id="correo" type="email" name="correo" required>
+                        <label for="correo">Correo electronico</label>
+                    </div>
+                    <div class="input-field col s12">
+                        <input id="telefono" type="tel" name="telefono" required>
+                        <label for="telefono">Numero de telefono</label>
+                    </div>
+                    <div class="input-field col s12">
+                        <textarea id="mensaje" class="materialize-textarea" name="mensaje"></textarea>
+                        <label for="mensaje">Mensaje</label>
+                    </div>
+                    <div class="col s12">
+                        <button class="btn waves-effect waves-light" type="submit">Enviar</button>
+                    </div>
                 </div>
+            </form>    
         </div>
-        
-        </div>
-
-
     </section>
 
 
