--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                 <div class="row">
                     <div class="col s4 center">
                         <a href="https://www.facebook.com/claudiaveronica.alcavilpena.1/about" target="_blank">
-                            <img src="css/logo de facebook.png" alt="Facebook">
+                            <img src="css/logo de facebook.png" width="50%" alt="Facebook">
                         </a>
                     </div>
                     
