--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <title>Landing Page - Local de Comida Rápida</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
   <!-- Importar archivos CSS de Materialize -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700,700i&display=swap">
   <style>
     /* Estilos personalizados */
     nav {
@@ -28,6 +28,19 @@
     .card h3 {
       color: #000000; /* Color del texto de los títulos de las tarjetas */
     }
+
+    body {
+    font-family: 'Roboto', sans-serif;
+    } 
+
+    h1, h2, h3{
+    font-family: 'Montserrat', sans-serif;
+    }
+    
+    p {
+    font-family: 'Lato', sans-serif;
+    }
+
   </style>
 </head>
 <body>
