--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
     }
 
     body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Times New Roman', Times, serif , sans-serif;
     } 
 
     h1, h2, h3{
-    font-family: 'Montserrat', sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     }
     
     p {
-    font-family: 'Lato', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     }
 
   </style>
