--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     }
     
     p {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
 
   </style>
