--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
 
+
   </style>
 </head>
 <body>
@@ -64,10 +65,10 @@
   <section id="bienvenida" class="section" style="background-color: #ffff00; color: #000000;">
     <div class="container">
       <div class="row">
-        <div class="col s12 m6">
+        <div class="col s12 m6" margin :auto>
           <h2>Bienvenidos al local de comida rápida donde la tia</h2>
           <p>Ofrecemos una amplia variedad de productos como completos, papas fritas, churrascos, pollo asado y hamburguesas. Todos nuestros productos son frescos y de alta calidad.</p>
-          <a href="#formulario" class="btn btn-large">Haz tu pedido</a>
+          <a href="#formulario" class="btn btn-large" >Haz tu pedido</a>
         </div>
         <div class="col s12 m6">
           <img src="css/local fisico.jpg" width="140%" alt="Imagen del local">
