--- a/index.html
+++ b/index.html
@@ -31,17 +31,36 @@
     }
 
     body {
-    font-family: 'Times New Roman', Times, serif , sans-serif;
+    font-family: Arial, sans-serif;
+    background-color: #f0f0f0;
+    font-size: 16px;
     } 
 
-    h1, h2, h3{
+    h1, h3{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     }
-    
+  
+    h2 {
+    font-size: 24px;
+    color: #333;
+    margin-bottom: 10px;
+    }  
+  
     p {
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
+  font-size: 14px;
+  color: #666;
+  line-height: 1.5;
+  } 
 
+    ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  }
+
+  li {
+  margin-bottom: 10px;
+  }
 
   </style>
 </head>
